<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Test App</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="prob1">Problem 1.) Change the Textview background color on button click</string>
    <string name="next">Next Problem</string>
    <string name="prob2">Problem 2.) Change the Text view background color to match the radio button click</string>
    <string name="redrad">Red</string>
    <string name="bluerad">Blue</string>
    <string name="yellrad">Yellow</string>
    <string name="prob3">Problem 3.) Change the Text view background color to match the toggle button click</string>
    <string name="prob4">Problem 4.) Change the Text view background color on the 2nd button click</string>
    <string name="title_activity_prob2activity">Test App</string>
    <string name="title_activity_prob4activity">Test App</string>
    <string name="radiocheck">Set Color Chosen Above</string>

</resources>
