<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.testapp.testapp.prob2activity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prob2" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginBottom="30dp"
        android:id="@+id/radiogroup1">

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/redrad"
        android:id="@+id/redRadioButton"
        android:onClick="radioclick" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/yellrad"
        android:id="@+id/yellowRadioButton"
        android:onClick="radioclick" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bluerad"
        android:id="@+id/blueRadioButton"
        android:onClick="radioclick" />

    </RadioGroup>

    <TextView
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:id="@+id/radioTextColor"
        android:layout_below="@+id/radiogroup1"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:onClick="nextprob2"/>

</RelativeLayout>
